# ChangeLog for net-misc/clinkcc
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Jun 2007; Jakub Moc <jakub@gentoo.org> clinkcc-1.7.1.ebuild:
  Fix up dependencies

  24 May 2007; Mounir Lamouri (Volkmar) <mounir.lamouri@gmail.com>
  clinkcc-1.7.1.ebuild:
  USE libxml2 becomes xml.

  22 May 2007; Mounir Lamouri (Volkmar) <mounir.lamouri@gmail.com>
  +clinkcc-1.7.1.ebuild, +files/gcc-4.1.patch, +metadata.xml:
  New Ebuild for bug 179471.
