@@ -1,5 +1,5 @@
 AUX gcc-4.1.patch 2062 RMD160 08e2c8b3979214488c7ea378217eef578cb5276e SHA1 4c9b22113624f428736fb4aa6b162fcb3e89a892 SHA256 6b93a85259620464300429c92303589c5524d49d1e8aed27f6dc595d8de59be2
 DIST clinkcc171.tar.gz 8880329 RMD160 e30274cef5b4a919964e18b4fc7a50e002b10ee4 SHA1 8b3e55edca59789fc32f8866ca31d31218514b74 SHA256 84f114fda1d8d5644b524d683359fec88af4ffdb51ebd86811f1431d17fca102
 EBUILD clinkcc-1.7.1.ebuild 980 RMD160 babd143f58c8c39fdd059f8193208a8dcdf6840d SHA1 5103c37d5f44aabd4a668439c2390eece0c3bede SHA256 963c197456f441406f5cfc43feb0b13dfe969e95023bf6695842dfe71d95c428
-MISC ChangeLog 484 RMD160 acfdcdef08ca5bd5bcd0311cd60f653f9f1589b7 SHA1 f8c810a2cc1d4bd96732e8cf1d051ce70e47a7d0 SHA256 59480795044de96adfa3d6e5f34f1617897dd5909f65307f3384e75abd4afa69
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
+MISC ChangeLog 605 RMD160 e32db924d2da9b2436dae7ea63aa79d404494cfd SHA1 9ad83ad5bebe334b311d0feb8bf2135184701ea2 SHA256 d62eb8cfc3d2925fb4d1a88e7e59d699eecc281fd805a7d869a7da3622e178e6
+MISC metadata.xml 239 RMD160 080f7db73becd14992669363158dbc9f93d5c8f9 SHA1 8d2408bc4f4d676b353ab5a98df3592af54faf51 SHA256 cfc5e16d03de8bb9b56764f41287a0df32cf938fb63385424f9cfd317df6ea99
