@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/clinkcc
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  31 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> metadata.xml:
+  Add local useflags to metadata.xml (GLEP 56)
 
   24 Jun 2007; Jakub Moc <jakub@gentoo.org> clinkcc-1.7.1.ebuild:
   Fix up dependencies
